--- a/index.html
+++ b/index.html
@@ -1,73 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
-  Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <img src="./images/logo.svg" alt="Fylo Logo" />
+        <nav>
+          <a href="#">Features</a>
+          <a href="#">Team</a>
+          <a href="#">Sign In</a>
+        </nav>
+      </header>
+      <main>
+        <section>
+          <img src="./images/illustration-1.svg" alt="illustration" />
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>
+            Fylo stores your most important files in one secure location. Access
+            them wherever you need, share and collaborate with friends, family,
+            and co-workers.
+          </p>
+          <form action="">
+            <input type="email" />
+            <input type="submit" value="Get Started" />
+          </form>
+        </section>
+        <section>
+          <img src="./images/illustration-2.svg" alt="illustration" />
+          <h2>Get Started Stay productive, wherever you are</h2>
+          <p>
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+          </p>
+          <p>
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required!
+          </p>
+          <a href="#"
+            >See how Fylo works
+            <span><img src="./images/icon-arrow.svg" alt="arrow icon" /></span
+          ></a>
+          <div class="testimonial">
+            <img src="./images/icon-quotes.svg" alt="quotes icon" />
+            <p class="testimonial-txt">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="testimonial-profile">
+              <img
+                src="./images/avatar-testimonial.jpg"
+                alt="profile picture"
+              />
+              <p>Kyle Burton <span>Founder & CEO, Huddle</span></p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <h2>Get early access today</h2>
+          <p>
+            It only takes a minute to sign up and our free starter tier is
+            extremely generous. If you have any questions, our support team
+            would be happy to help you.
+          </p>
+          <form action="">
+            <input type="email" />
+            <input type="submit" value="Get Started For Free" />
+          </form>
+        </section>
+      </main>
+      <footer>
+        <img src="./images/logo.svg" alt="fylo logo" />
+        <div class="f-contact">
+          <div class="phone">
+            <p>
+              <span
+                ><img src="./images/icon-phone.svg" alt="phone icon"
+              /></span>
+              Phone: +1-543-123-4567
+            </p>
+          </div>
+          <div class="email">
+            <p>
+              <span
+                ><img src="./images/icon-email.svg" alt="email icon"
+              /></span>
+              example@fylo.com
+            </p>
+          </div>
+        </div>
+        <div class="f-nav">
+          <a href="#">About Us</a>
+          <a href="#">Jobs</a>
+          <a href="#">Press</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+        </div>
+        <div class="socials">
+          <a href="#" class="txt-white"
+            ><ion-icon name="logo-facebook"></ion-icon
+          ></a>
+          <a href="#" class="txt-white"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
+          <a href="#" class="txt-white"
+            ><ion-icon name="logo-twitter"></ion-icon
+          ></a>
+        </div>
+      </footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </div>
+    <!-- FAV ICONS -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
