--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -49,37 +55,39 @@
             <input type="submit" value="Get Started" />
           </form>
         </section>
-        <section>
-          <img src="./images/illustration-2.svg" alt="illustration" />
-          <h2>Get Started Stay productive, wherever you are</h2>
-          <p>
-            Never let location be an issue when accessing your files. Fylo has
-            you covered for all of your file storage needs.
-          </p>
-          <p>
-            Securely share files and folders with friends, family and colleagues
-            for live collaboration. No email attachments required!
-          </p>
-          <a href="#"
-            >See how Fylo works
-            <span><img src="./images/icon-arrow.svg" alt="arrow icon" /></span
-          ></a>
-          <div class="testimonial">
-            <img src="./images/icon-quotes.svg" alt="quotes icon" />
-            <p class="testimonial-txt">
-              Fylo has improved our team productivity by an order of magnitude.
-              Since making the switch our team has become a well-oiled
-              collaboration machine.
+        <div class="wrapper-productive">
+          <section>
+            <img src="./images/illustration-2.svg" alt="illustration" />
+            <h2>Get Started Stay productive, wherever you are</h2>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
             </p>
-            <div class="testimonial-profile">
-              <img
-                src="./images/avatar-testimonial.jpg"
-                alt="profile picture"
-              />
-              <p>Kyle Burton <span>Founder & CEO, Huddle</span></p>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required!
+            </p>
+            <a href="#"
+              >See how Fylo works
+              <span><img src="./images/icon-arrow.svg" alt="arrow icon" /></span
+            ></a>
+            <div class="testimonial">
+              <img src="./images/icon-quotes.svg" alt="quotes icon" />
+              <p class="testimonial-txt">
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine.
+              </p>
+              <div class="testimonial-profile">
+                <img
+                  src="./images/avatar-testimonial.jpg"
+                  alt="profile picture"
+                />
+                <p>Kyle Burton <span>Founder & CEO, Huddle</span></p>
+              </div>
             </div>
-          </div>
-        </section>
+          </section>
+        </div>
         <section>
           <h2>Get early access today</h2>
           <p>
